로그인, 회원가입

--- a/store/css/common.css
+++ b/store/css/common.css
@@ -2,6 +2,8 @@
 
 .content{width:1080px;margin:0 auto;padding:140px 0 165px;box-sizing:border-box;}
 
+/* width */
+.wAuto{width:auto !important;}
 /* margin */
 
 /* padding */
@@ -12,6 +14,7 @@
 .ar{text-align:right;}
 .blind{display: inline-block;position: absolute !important;width: 1px;height: 1px;margin: -1px;border: 0;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);clip-path: inset(50%);}
 
+.normal{font-weight:500;}
 .bold{font-family:'s-core_dream5_medium';}
 
 /* color */
@@ -19,10 +22,14 @@
 .pointC2{color:#00965e !important;}
 .pointC3{color:#999999 !important;}
 
+.bgG{background-color:#fbfbfb;}
+
 /* tit */
-.titArea{margin-bottom:60px;text-align:center;}
+.titArea{position:relative;margin-bottom:60px;text-align:center;}
+.titArea.line:before{content:'';position:absolute;top:-140px;left:50%;display:block;height:100px;border-right:1px solid #e0e0e0;}
 [class^=titH]{position:relative;color:#00965e;letter-spacing:-0.025em;}
 .titH1{font-size:48px;}
+.titH2{font-size:46px;}
 
 /* float */
 .fl{float:left;}
@@ -40,9 +47,21 @@
 /* txtList */
 
 /* button */
+.btn_m{width:100px;height:46px;margin-left:10px;color:#333;font-family:'s-core_dream3_light';border-radius:5px;}
 
 
 /* form */
+.form .inpBox{display:inline-block;width:300px;height:46px;}
+.form input{padding:0 10px;font-size:15px;}
+.form input[type="text"] + input[type="text"]{margin:10px 0 0;}
+.form select{font-size:15px;}
+.form .email{width:auto !important;}
+.form .email input,
+.form .email select{display:inline-block;width:200px;margin:0 10px 0 0;}
+.form .sign{margin-right:10px;color:#999;font-family:'s-core_dream3_light';line-height:46px;}
+
+.formMsg{display:inline-block;margin-left:12px;font-family:'s-core_dream3_light';}
+.error{color:#d41111;}
 
 /* input */
 input[type='text'],
@@ -50,45 +69,58 @@ input[type='date'],
 input[type='password'],
 input[type='tel'],
 input[type='email'],
-input[type='number']{position: relative;display:block;width:100%;height:59px;font-size:18px;color:#1b2026;line-height:59px;text-indent:1px;text-align:left;border:0; border-bottom:1px solid #dbdee3; -webkit-appearance:none; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; -webkit-border-radius:0px;}
+input[type='number']{position: relative;display:block;width:100%;height:100%;color:#333;line-height:59px;text-indent:1px;text-align:left;border:0;border-bottom:1px solid #dbdee3;-webkit-appearance:none;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-border-radius:0px;}
 input[type='text']:focus,
 input[type='password']:focus,
 input[type='number']:focus,
 input[type='tel']:focus,
 input[type='email']:focus,
 input[type='date']:focus {border-bottom:1px solid #00965e;transition:1s all;}
-.inpBox{position:relative;max-width:100%; vertical-align:middle;}
+.inpBox{position:relative;max-width:100%;vertical-align:middle;}
 .inpBox +.inpBox{margin:8px 0 0;}
 .inp{background:#fff;}
-.inp:placeholder{color:#c4c4c4;font-size:18px;}
+.inp:placeholder{color:#c4c4c4;}
 input[type='checkbox'],
-input[type='radio'] {position:absolute; top:auto; width:27px; height:27px; opacity:0; z-index:-1;}
+input[type='radio'] {position:absolute;top:auto;width:27px;height:27px;opacity:0;z-index:-1;}
 input[type='checkbox'] + label,
-input[type='radio'] + label {display:inline-block; position:relative; min-height:27px; padding-left:36px; color:#666;; font-size:14px;line-height:27px;vertical-align:top; cursor:pointer; z-index:1;}
+input[type='radio'] + label {display:inline-block;position:relative;min-height:27px;padding-left:36px;color:#666;;font-size:14px;line-height:27px;vertical-align:top;cursor:pointer;z-index:1;}
 input[type='checkbox'] + label:before,
-input[type='radio'] + label:before {display:inline-block; content:''; position:absolute; top:0; left:0; width:27px; height:27px; margin:0 10px 0 0; border:1px solid #f1f3f5; border-radius:50%; vertical-align:top; box-sizing:border-box; transition:background-color ease-in-out 0.225s;}
-input[type='checkbox'] + label:before {background:url(../img/pc/check.png) no-repeat bottom center; background-size:25px auto;}
-input[type='checkbox']:checked + label:before {border:1px solid #00965e; background:#00965e url(../img/pc/check.png) no-repeat top center; background-size:25px auto; transition: background-color 0s;}
+input[type='radio'] + label:before {display:inline-block;content:'';position:absolute; top:0;left:0;width:27px;height:27px;border:1px solid #f1f3f5;border-radius:50%;vertical-align:top;box-sizing:border-box;transition:background-color ease-in-out 0.225s;}
+input[type='checkbox'] + label:before {background:url(../img/pc/check.png) no-repeat bottom center;background-size:25px auto;}
+input[type='checkbox']:checked + label:before {border:1px solid #00965e;background:#00965e url(../img/pc/check.png) no-repeat top center;background-size:25px auto;transition: background-color 0s;}
 input[type='checkbox']:checked + label:hover:before,
 input[type='checkbox']:checked:focus + label:before {border-color:#00965e;}
-input[type='checkbox'][disabled] + label:before {background:#f1f3f5 url(../images/common/ico_checkbox_disabled.png) no-repeat center center; background-size:24px auto; border-color:#f1f3f5;}
-input[type='checkbox'][disabled]:checked + label:before {background:#f1f3f5 url(../images/common/ico_checkbox_disabled.png) no-repeat center center; background-size:24px auto;}
+input[type='checkbox'][disabled] + label:before {background:#f1f3f5 url(../images/common/ico_checkbox_disabled.png) no-repeat center center;background-size:24px auto;border-color:#f1f3f5;}
+input[type='checkbox'][disabled]:checked + label:before {background:#f1f3f5 url(../images/common/ico_checkbox_disabled.png) no-repeat center center;background-size:24px auto;}
 input[type='checkbox']:focus-visible{opacity:1;}
+.inpBox.flex{display:flex !important;}
+.inpBox.flex input[type="number"]{width:100px;margin-left:8px;}
+
+/* select */
+select{width:100%;height:100%;color:#999;border:0;border-bottom:1px solid #dbdee3;outline:0;}
+select:focus{border:1px solid #00965e;}
+.minSelect{width:100px;height:46px;}
+
 
 /* link */
-.linkGroup {font-size:0;text-align:left;}
+.linkGroup {font-size:0;text-align:center;}
 .linkGroup > .links {margin-right:34px; vertical-align:top;}
 .linkGroup > .links.line {text-decoration:none;}
-.linkGroup > .links.line:before {content:''; position:absolute; top:50%; left:-15px; height:12px; margin-top:-6px; border-right:1px solid #b2b2b2;}
+.linkGroup > .links.line:before {content:'';position:absolute; top:50%;left:-15px;height:12px;margin-top:-6px;border-right:1px solid #b2b2b2;}
 .linkGroup > .links.line:first-child:before {content:none;}
-.links, a.links {position:relative; display:inline-block; font-size:14px; color:#666; background:transparent;}
+.links, a.links {position:relative;display:inline-block;font-size:14px; color:#666;background:transparent;}
 
-
+/* talbe */
+.tableY{width:100%;}
+.tableY .tr{display:table;table-layout:fixed;width:100%;border-bottom:1px solid #bcbcbc;box-sizing:border-box;}
+.tableY .th{display:table-cell;width:200px;padding:0 33px;color:#999999;font-size:20px;font-weight:600;background-color:#e0e0e0;line-height:73px;letter-spacing:-0.25px;box-sizing:border-box;}
+.tableY .td{display:table-cell;width:calc(100% - 200px);padding:0 45px;}
+.tableY .td.line2{height:125px;box-sizing:border-box;}
 
 
 /* mo */
 @media screen and (max-width: 1080px) {
-.content{width:100%;margin:0 auto;padding:0 30px;box-sizing:border-box;}
+.content{width:100%;padding:0 30px;}
 
 /* header */
 header{height:60px;}
@@ -96,15 +128,34 @@ header img{display:none;}
 
 /* footer */
 footer{display:none;position:fixed;bottom:0;}
+
 /* tit */
-.titArea{margin:30px 0;text-align:center;}
-[class^=titH]{position:relative;color:#00965e;letter-spacing:-0.025em;}
+.titArea{margin:30px 0;}
+.titArea.line:before{top:-74px;display:block;height:50px;}
 .titH1{font-size:24px;}
+.titH2{font-size:22px;}
+
+/* display */
+.moFlex{display:flex !important;}
+
+/* button */
+.btn_m{width:100%;height:32px;margin:10px 0 0;font-size:12px;}
+
+.moFlex [class^="btn_"]{width:30%; margin:0 0 0 10px;}
 
 /* form */
+.form .inpBox{width:100%; height:32px}
+.form input{font-size:12px;}
+.form select{height:32px;font-size:12px;}
+.form .email input, .form .email select{width:100%;margin:0 3px 0 0;}
+.form .sign{margin-right:3px;font-size:12px;line-height:32px;}
+.form .inpBox + [class^="btn_"]{}
+.formMsg{margin:10px 0 0;font-size:12px;}
+
+/* select */
 
 /* input */
-input[type='text'], input[type='date'], input[type='password'], input[type='tel'], input[type='email'], input[type='number']{height:32px;padding-left:15px;font-size:12px;line-height:32px;}
+input[type='text'], input[type='date'], input[type='password'], input[type='tel'], input[type='email'], input[type='number']{padding-left:15px;font-size:12px;line-height:32px;}
 .inp:placeholder{font-size:11px;}
 input[type='checkbox'] + label, input[type='radio'] + label{min-height:24px;padding-left:28px;font-size:12px;line-height:24px;}
 input[type='checkbox'] + label:before, input[type='radio'] + label:before{width:24px;height:24px;}
@@ -112,8 +163,16 @@ input[type='checkbox'] + label:before{background-size:22px auto;}
 input[type='checkbox']:checked + label:before{background-size:22px auto;}
 
 /* link */
-.linkGroup{text-align:center;}
 .linkGroup > .links{margin-right:21px;}
 .linkGroup > .links.line{font-size:12px;}
 .linkGroup > .links.line:before{left:-10px;margin:-7px 0 0;}
+
+/* talbe */
+.tableY .tr{display:block;table-layout:fixed;width:100%;border-bottom:none;}
+.tableY .tr + .tr{margin:15px 0 0;}
+.tableY .th{display:inline-block;width:100%;padding:0;font-size:14px;background-color:transparent;line-height:24px;}
+.tableY .td{display:block;width:100%;margin:5px 0;padding:0;}
+
+
+
 }
