--- a/src/handlebars/partials/footer.hbs
+++ b/src/handlebars/partials/footer.hbs
@@ -1,13 +1,23 @@
 <footer>
-    <ul class="termList">
-        <li><a href="#">회사소개</a></li>
-        <li><a href="#">이용약관</a></li>
-        <li><a href="#">개인정보처리방침</a></li>
-        <li><a href="#">고객센터</a></li>
-        <li><a href="#">사업자정보확인</a></li>
-    </ul>
+    <div class="footerWrap">
+        <div class="titArea">
+            <h2 class="h2">portfolio</h2>
+        </div>
+        <ul class="footerList">
+            <li><a href="#">적응형</a></li>
+            <li><a href="#">반응형</a></li>
+            <li><a href="#">APP</a></li>
+        </ul>
 
-    <div class="infoWrap">
+        <div class="infoWrap">
+            <ul class="footerList">
+                <li>이름 : 한이슬</li>
+                <li>전화번호 : 010-9343-8426</li>
+                <li>이메일 : seulli_hys@daum.net</li>
+            </ul>
+        </div>
+
+        <p class="copyright">Copyright ⓒ 2022 HANYISEUL All Right Reserved.</p>
 
     </div>
 </footer>
