--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -73,7 +73,7 @@ textarea {
 }
 
 button{
-    font-family: "Pretendard", sans-serif;
+    font-family: "s-core", sans-serif;
     font-weight: 400;
     font-size: 1.6rem;
 }
