--- a/src/assets/scss/components/_text.scss
+++ b/src/assets/scss/components/_text.scss
@@ -13,8 +13,26 @@
 
 // title
 .titleArea {
+    text-align: center;
+    
     .h1 {
         font-size: $font36;
         font-weight: 600;
+    }
+
+    .h2 {
+        color: $point1;
+        font-size: 2.7rem;
+        font-weight: 500;
+        line-height: 4.8rem;
+        letter-spacing: -0.025rem;
+    }
+
+    .desc {
+        color: $gray900;
+        font-size: 1.8rem;
+        font-weight: 400;
+        line-height: 4.8rem;
+        letter-spacing: -0.025rem;
     }
 }
