--- a/src/handlebars/templates/main.hbs
+++ b/src/handlebars/templates/main.hbs
@@ -13,52 +13,77 @@
 
         <ul class="slideList storeList">
             <li>
-                <p class="title">우야우야</p>
-                <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                <a href="#">
+                    <img src="" alt="../../assets/images/img_store1.png">
+                    <p class="title">우야우야</p>
+                    <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                </a>
             </li>
             <li>
-                <p class="title">성수족발</p>
-                <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                <a href="#">
+                    <p class="title">성수족발</p>
+                    <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                </a>
             </li>
             <li>
-                <p class="title">일오닭갈비</p>
-                <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                <a href="#">
+                    <p class="title">일오닭갈비</p>
+                    <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                </a>
             </li>
             <li>
-                <p class="title">버거인</p>
-                <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                <a href="#">
+                    <p class="title">버거인</p>
+                    <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                </a>
             </li>
             <li>
-                <p class="title">피자업</p>
-                <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                <a href="#">
+                    <p class="title">피자업</p>
+                    <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                </a>
             </li>
             <li>
-                <p class="title">라멘101</p>
-                <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
+                <a href="#">
+                    <p class="title">라멘101</p>
+                    <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span> 
+                </a>
             </li>
             <li>
-                <p class="title">버거인</p>
-                <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                <a href="#">
+                    <p class="title">버거인</p>
+                    <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                </a>
             </li>
             <li>
-                <p class="title">피자업</p>
-                <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                <a href="#">
+                    <p class="title">피자업</p>
+                    <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                </a>
             </li>
             <li>
-                <p class="title">라멘101</p>
-                <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
+                <a href="#">
+                    <p class="title">라멘101</p>
+                    <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
+                </a>
             </li>
             <li>
-                <p class="title">우야우야</p>
-                <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                <a href="#">
+                    <p class="title">우야우야</p>
+                    <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                </a>
             </li>
             <li>
-                <p class="title">성수족발</p>
-                <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                <a href="#">
+                    <p class="title">성수족발</p>
+                    <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                </a>
             </li>
             <li>
-                <p class="title">일오닭갈비</p>
-                <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                <a href="#">
+                    <p class="title">일오닭갈비</p>
+                    <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                </a>
             </li>
         </ul>
     </section>
@@ -76,39 +101,87 @@
 
         <ul class="slideList storeList">
             <li>
-                <p class="title">우야우야</p>
-                <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                <a href="#">
+                    <p class="title">우야우야</p>
+                    <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                </a>
             </li>
             <li>
-                <p class="title">성수족발</p>
-                <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                <a href="#">
+                    <p class="title">성수족발</p>
+                    <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                </a>
             </li>
             <li>
-                <p class="title">일오닭갈비</p>
-                <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                <a href="#">
+                    <p class="title">일오닭갈비</p>
+                    <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                </a>
             </li>
             <li>
-                <p class="title">버거인</p>
-                <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                <a href="#">
+                    <p class="title">버거인</p>
+                    <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                </a>
             </li>
             <li>
-                <p class="title">피자업</p>
-                <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                <a href="#">
+                    <p class="title">피자업</p>
+                    <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                </a>
             </li>
             <li>
-                <p class="title">라멘101</p>
-                <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
+                <a href="#">
+                    <p class="title">라멘101</p>
+                    <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span> 
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <p class="title">버거인</p>
+                    <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <p class="title">피자업</p>
+                    <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <p class="title">라멘101</p>
+                    <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <p class="title">우야우야</p>
+                    <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <p class="title">성수족발</p>
+                    <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <p class="title">일오닭갈비</p>
+                    <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                </a>
             </li>
         </ul>
     </section>
 
-   <section>
+    <section class="main">
         <div class="titleArea">
             <h2 class="h2">커뮤니티 게시판</h2>
             <span class="desc">다양한 정보를 실시간으로 찾아보세요</span>
         </div>
 
-       <div class="boardWrap">
+        <div class="boardWrap">
             <div class="boardArea">
                 <p class="name">이슬</p>
                 <p class="desc">곱창, 막창, 삼겹살, 감자탕, 감바스파스타, 파전에막걸리 물론 파전은 해물파전, 팝콥은 허니맛, 탕수육은 찍먹, 즉떡치즈추가, 피시방라면, 매운탕에 수제비 추가, 닭칼국수, 족발보쌈반반, 오돌뼈</p>
@@ -126,6 +199,7 @@
                 <p class="desc">곱창, 막창, 삼겹살, 감자탕, 감바스파스타, 파전에막걸리 물론 파전은 해물파전, 팝콥은 허니맛, 탕수육은 찍먹, 즉떡치즈추가,</p>
                 <span class="date">2023.01.03</span>
             </div>
-       </div>
-   </section>
+        </div>
+    </section>
+    
 {{/[../helpers/layout-search]}} 
