--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -21,6 +21,7 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 1.6rem;
+    letter-spacing: -0.025rem;
     -webkit-text-size-adjust: 100%;
     overflow-x:hidden;
     overscroll-behavior-y:contain;
