메인 게시판 수정

--- a/src/handlebars/templates/main.hbs
+++ b/src/handlebars/templates/main.hbs
@@ -14,7 +14,7 @@
         <ul class="slideList storeList">
             <li>
                 <a href="#">
-                    <img src="" alt="../../assets/images/img_store1.png">
+                    <img src="../../assets/images/img_store1.png" alt="">
                     <p class="title">우야우야</p>
                     <span class="desc">스테이크와 와인 분위기 있는 식사</span>
                 </a>
@@ -181,24 +181,35 @@
             <span class="desc">다양한 정보를 실시간으로 찾아보세요</span>
         </div>
 
-        <div class="boardWrap">
-            <div class="boardArea">
-                <p class="name">이슬</p>
+        <div class="board">
+            <a href="#" class="boardArea">
+                <div class="writer">  
+                    <span class="img"><img src="../../assets/images/img_profile.png" alt=""></span>
+                    <p class="name">이슬</p>
+                </div>
                 <p class="desc">곱창, 막창, 삼겹살, 감자탕, 감바스파스타, 파전에막걸리 물론 파전은 해물파전, 팝콥은 허니맛, 탕수육은 찍먹, 즉떡치즈추가, 피시방라면, 매운탕에 수제비 추가, 닭칼국수, 족발보쌈반반, 오돌뼈</p>
                 <span class="date">2023.01.01</span>
-            </div>
+            </a>
+
             
-            <div class="boardArea">
-                <p class="name">이슬2</p>
+            <a href="#" class="boardArea">
+                <div class="writer">  
+                    <span class="img"><img src="../../assets/images/img_profile.png" alt=""></span>
+                    <p class="name">이슬2</p>
+                </div>
                 <p class="desc">곱창, 막창, 삼겹살, 감자탕, 감바스파스타, 파전에막걸리 물론 파전은 해물파전, 팝콥은 허니맛, 탕수육은 찍먹, 즉떡치즈추가, 피시방라면, 매운탕에 수제비 추가, 닭칼국수, 족발보쌈반반, 오돌뼈곱창, 막창, 삼겹살, 감자탕, 감바스파스타, 파전에막걸리 물론 파전은 해물파전, 팝콥은 허니맛, 탕수육은 찍먹, 즉떡치즈추가, 피시방라면, 매운탕에 수제비 추가, 닭칼국수, 족발보쌈반반, 오돌뼈</p>
                 <span class="date">2023.01.02</span>
-            </div>
+            </a>
+
             
-            <div class="boardArea">
-                <p class="name">이슬3</p>
+            <a href="#" class="boardArea">
+                <div class="writer">  
+                    <span class="img"><img src="../../assets/images/img_profile.png" alt=""></span>
+                    <p class="name">이슬3</p>
+                </div>
                 <p class="desc">곱창, 막창, 삼겹살, 감자탕, 감바스파스타, 파전에막걸리 물론 파전은 해물파전, 팝콥은 허니맛, 탕수육은 찍먹, 즉떡치즈추가,</p>
                 <span class="date">2023.01.03</span>
-            </div>
+            </a>
         </div>
     </section>
     
