--- a/src/assets/scss/layout/_search.scss
+++ b/src/assets/scss/layout/_search.scss
@@ -2,7 +2,7 @@
     padding: 16rem 0 24rem;
     background: url("../../assets/images/bg_search.png") no-repeat center;
 
-    .titleArea {
+    .title {
         .h1 {
             color: $white;
         }
