--- a/src/assets/scss/templates/_section.scss
+++ b/src/assets/scss/templates/_section.scss
@@ -7,8 +7,8 @@ section {
         margin-top: 13rem;
     }
 
-    .titleArea {
-        .btnArea {
+    .title {
+        .btnGroup {
             display: inline-block;
             position: absolute;
             right: 0;
