--- a/src/handlebars/partials/search.hbs
+++ b/src/handlebars/partials/search.hbs
@@ -1,5 +1,5 @@
 <div class="searchWrap">
-    <div class="titleArea">
+    <div class="title">
         <p class="h1">나만의 맛집을 공유하고, 찾아보세요!</p>
     </div> 
     <div class="inputArea">
