--- a/src/assets/scss/layout/_gnb.scss
+++ b/src/assets/scss/layout/_gnb.scss
@@ -1,6 +1,6 @@
 .gnb {
     padding : 3.7rem 0;
-    .gnbList {
+    .gnb__list {
         display: flex;
         justify-content: center;
         align-items: center;
