--- a/src/handlebars/partials/footer.hbs
+++ b/src/handlebars/partials/footer.hbs
@@ -1,16 +1,16 @@
 <footer>
-    <div class="footerWrap">
-        <div class="titArea">
+    <div class="footer">
+        <div class="title">
             <h2 class="h2">portfolio</h2>
         </div>
-        <ul class="footerList">
+        <ul class="footer__list">
             <li><a href="#">적응형</a></li>
             <li><a href="#">반응형</a></li>
             <li><a href="#">APP</a></li>
         </ul>
 
-        <div class="infoWrap">
-            <ul class="footerList">
+        <div class="info">
+            <ul class="footer__list">
                 <li>이름 : 한이슬</li>
                 <li>전화번호 : 010-9343-8426</li>
                 <li>이메일 : seulli_hys@daum.net</li>
