--- a/src/handlebars/partials/header.hbs
+++ b/src/handlebars/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="header">
   <nav class="gnb">
-    <ul class="gnbList">
+    <ul class="gnb__list">
         <li><a href="#">주변맛집</a></li>
         <li><a href="#">맛집순위</a></li>
         <li><a href="#">허위맛집리스트</a></li>
