--- a/src/handlebars/partials/search.hbs
+++ b/src/handlebars/partials/search.hbs
@@ -1,4 +1,4 @@
-<div class="searchWrap">
+<div class="search__wrap">
     <div class="title">
         <p class="h1">나만의 맛집을 공유하고, 찾아보세요!</p>
     </div> 
