--- a/src/assets/scss/layout/_search.scss
+++ b/src/assets/scss/layout/_search.scss
@@ -1,4 +1,4 @@
-.searchWrap {
+.search__wrap {
     padding: 16rem 0 24rem;
     background: url("../../assets/images/bg_search.png") no-repeat center;
 
