footer title 수정

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -8,6 +8,7 @@ footer {
         margin: 0 auto;
 
         .title {
+            text-align: left;
             .h2 {
                 color: $gray900;
             }
