--- a/src/assets/scss/components/_board.scss
+++ b/src/assets/scss/components/_board.scss
@@ -11,16 +11,6 @@
                 border-top: 0.1rem solid $gray100;
             }
 
-            > a {
-                position: relative;
-            }
-
-            .img {
-                position: absolute;
-                left: 0;
-                top: 0;
-            }
-  
             .writer {
                 display: flex;
                 align-items: center;
@@ -33,13 +23,13 @@
             .desc {
                 margin: 1rem 0 0;
                 color: $gray600;
-                font-size: 1.6rem;
+                font-size: $font-xs;
                 font-weight: 500;
                 line-height: 2.4rem;
 
                 +.date {
                     color: $gray900;
-                    font-size: 1.4rem;
+                    font-size: $font-2xs;
                     font-weight: 400;
                     line-height: 2.4rem;
                 }
