--- a/src/assets/scss/layout/_gnb.scss
+++ b/src/assets/scss/layout/_gnb.scss
@@ -10,7 +10,7 @@
             margin: 0 3.4rem;
             > a {
                 color: $gray300;
-                font-size: $font20;
+                font-size: $font-m;
                 font-weight: 500;
                 
             }
