--- a/src/assets/scss/utilities/_variables.scss
+++ b/src/assets/scss/utilities/_variables.scss
@@ -18,12 +18,12 @@ $point3: #d41111;
 
 
 // font size
-$font14: 1.4rem;
-$font16: 1.6rem;
-$font18: 1.8rem;
-$font20: 2rem;
-$font20: 2.2rem;
-$font24: 2.4rem;
-$font28: 2.8rem;
-$font36: 3.6rem;
+$font-2xs: 1.4rem;
+$font-xs: 1.6rem;
+$font-s: 1.8rem;
+$font-m: 2rem;
+$font-l: 2.2rem;
+$font-xl: 2.4rem;
+$font-2xl: 2.8rem;
+$font-3xl: 3.6rem;
 
